--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "Real-time Quiz Game Backend"
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 packages = [{include = "app", from = "backend"}]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9"
